# ChangeLog for schedule

*schedule-4.1:
	Martin Väth <martin at mvath.de>:
	- Fix exit status reporting (regression of schedule-4.0)
	- start/queue: print job address and exit status to stdout unless quiet
	- Split job list arguments
	- Slightly reorganize modules
	- zsh-completion: fix --file

*schedule-4.0:
	Martin Väth <martin at mvath.de>:
	- Split into modules to minimize memory footprint

*schedule-3.1:
	Martin Väth <martin at mvath.de>:
	- Protocoll cleanup (\0 separators), making data sanitizing superfluous
	- minor code cleanup
	- man: document HOSTNAME etc
	- man: document --exit and cancel in more detail
	- man: rearrangements and cosmetical improvements

*schedule-3.0:
	Martin Väth <martin at mvath.de>:
	- Support job addresses, job address ranges (also relative ones)
	- list displays now job addresses
	- list handles --quiet differently
	- status does not imply --quiet
	- new commands: address, number

*schedule-2.2:
	Martin Väth <martin at mvath.de>:
	- Support nonpositive numbers in all job ranges; explain consequences

*schedule-2.1:
	Martin Väth <martin at mvath.de>:
	- Fix checks for ranges

*schedule-2.0:
	Martin Väth <martin at mvath.de>:
	- Let exec, run, wait support static jobs and static job ranges to
	  "cancel" the race condition as desired.
	- Make parallel and bg race-free, parallel waiting only for the
	  processes just started
	- Let --daemon not discard stderr (in contrast to --detach)
	- New server option -q: make server more verbose if -q is not passed
	- Improve list output
	- internal restructure of server loop

*schedule-1.1:
	Martin Väth <martin at mvath.de>:
	- Introduce --bg, --daemon
	- Make the communication protocol safe concerning message length
	- Due to the previous change, strange communication bugs for some
	  commands are now fixed. For instance, when using encryption,
	  "schedule exec" was failing when looping over more than one process
	- Do not set executable bit on libraries

*schedule-1.0: