@@ -13,7 +13,7 @@ use Schedule::Client::Clientfuncs qw(:FUNCS);
 use Schedule::Client::Testarg;
 use Schedule::Helpers qw(is_nonnegative);
 
-our $VERSION = '4.0';
+our $VERSION = '4.2';
 
 #
 # Functions
