@@ -9,7 +9,7 @@ use strict;
 use warnings;
 use integer;
 
-our $VERSION = '4.0';
+our $VERSION = '4.2';
 
 =head1 NAME
 
@@ -694,8 +694,7 @@ Martin VE<auml>th E<lt>martin@mvath.deE<gt>
 
 sub man_schedule_init {
 	my ($s) = @_;
-	$s->check_version();
-	'Schedule.pm'
+	$s->check_version()
 }
 
 'EOF'
